--- a/ParcAuto/Forms/MAJConducteur.resx
+++ b/ParcAuto/Forms/MAJConducteur.resx
@@ -117,4 +117,33 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="btnClear.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAAWIAAAFiAV8n0FMAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAE30lEQVR4Xu2bW6hVVRSGt5kmPpSVitBFC3wprHxQJEG6EV0givQlCSRCJXrpIboQIWQUohJ0ISSj
+        KIQoQcEiKMTqJbXoaj4YZUX5Ej0UZqF1+n/OnKt/Dcdea859zjprc1gDPjhrfHvsOfbYl3XZ+/RGRkYm
+        BMQywD9SmeHdz3jjJpsA0Q1AHlwKk34AP4J9wm9A/aQfwNPGvyuOdANQ3xRusgkQ3QDkwZFuAMZ3AxBH
+        ugGobwo32QSIbgDy4Eg3AOO7AYgj3QDUN4WbbAJENwB5cKQbgPHdAMSRbgDqm8JNNgFi8g0AcTG4JpH7
+        gD7AHUD9AaD+RqC+ivO8/lJwk6kgHgbadFvc5PWXgptMBdENQJpok6EZwOtgwwTwPtB1h2YAAzeSA2Lc
+        1nWTqSC6AUgTY2okB8TQDuBLoF93NcV3QNcdmgG0RWsDeFyaaJPWBrBFmmiT1gawXZogS8SdLXmy29Ru
+        FUcWZ9RuEkeKdXNxk6kgdkoTZIG4yyVPnjO1b4ojszNqXxFH5qvPwU2mgrBHZDPF3Sx58pCp3S/uhHF1
+        te+II8W6ubjJVBCfSBPHjVsrjqw2/hdxR4yrqz0orrRuLm4yFcS30shR454QR1aImwb+CXmyN7U2+B/E
+        fa8uFzeZCuIPaeSgcfZ9eom4BZInr6bWBv+nuAPqcnGTKSDmSxPkbeP3ivsXTBe3IuQjGzNq7R5ij9bm
+        4iZTQNwqTZAtxh8Rd8y41eLIOuOraq8WR55Vn4ubTAFhD4PvNv6EuNLLFGFrbzG+qvZ+cWSN+lzcZAoI
+        XvzQRhaJmyN5stPUPi+O5NS+LI5coT4XN5kC4nNp4i9wprjrQz7yjKn9SByZlVH7hTi+Uop1B8FN1sFF
+        wd8gNvKp8ZvFkVXiZoFTIU8OZdTOACdDnuzX2kFwk3UgFksTZLvxh8SxYX2GV4V8ZHNG7ZKQj7ygtYPg
+        JutAPCZNkPXi7O7xQ1Nr38PXZdQ+II7cq34Q3GQdiI+lCVKcjCDWSZ48Im4K0ENgHkjpPr5vbfC8GqR+
+        ofpBcJNVIOYCHpzEJr4yfrc4cpU4+9bZlVE7G+hnxzdaOyhusgrEGmmCPCVuOtDD459N7aPiyNqM2r7r
+        jgU3WQXiLWmCLBdnd2H2w9Hu/i7KqN0ljixTPyh+ste7B7wBSvtYBJ+l30Fs4lcwVbzdha0UZ3d/X0eX
+        UDsT6AnQMTDF1Ls913F6YvSO4nucV230AOeOkI+8ZmrtLuwccXb3tymj9s6Qj2wztX17rqO8MXqWph9w
+        pNhPI/QsjZQuRiIWgo2A/w7zgXFngZVgD+Ar4VrjWfsk8GrfA/wjUpw7ICp7rqO80eudAXQ/fRjMC25R
+        yEX45UTpZRhB8H4u8BxBzAPT+rhSLeIywD8iPwF9VfbtOYXTE//fYemOENtAXISUrtM1BeJFWZOUjg3C
+        bdyeg7sQ6DfLN5S8bhTJ0TssfnbCv8FxwA3C84A5WtMEiHOBrsuTn/P73LbUs+Srf5ukG/1APCh3QHZ4
+        txtvEHbdl7zbVYEY2wAQPPM7GoojpYuUTYDw1r3Su20ViDEPwB6B8RPXflvbBHrJneyTnu7itrBUe1YQ
+        vIaovyi7tOR1w4Lgs6CXvtvkNulrYn4fgLDPflt8BopdLqL5ASCG6dm/3fQ2TgMY6f0HiWHOflSPiDQA
+        AAAASUVORK5CYII=
+</value>
+  </data>
 </root>
