--- a/ParcAuto/Form1.resx
+++ b/ParcAuto/Form1.resx
@@ -121,135 +121,51 @@
   <data name="btnConducteurs.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcGFjgzK2bT3AAABJNJREFU
-        WEe1l1lsVFUYx40LuIEYNS7gEg3iGt+BF4xPIhBxA7VYHwQVgyaSWPHZCCYuARIw8cEYiA/ypHGL1SrU
-        ItIQqyltp9OpQ6GppAULIgQo4+93/W47006RwvRL/jnf/n3n3HvOPfe8sVJzc/OE9vb2Fzs6OhrAoWw2
-        2w/q4Zc1NjZeFG7jQ7lc7lqK7aRYL3iTRuaB+ehWgwPotiNfE+6VpUKhcAEFfqbQjnJFOjs7r8PWCLbh
-        e36oK0cUryZ5v4VCNYIymcxU/A6DxaGqHJH0axpYG2IJ+eyxL+P9uByfjfCfhalyROJOEleHOEisyB3o
-        f8Tek8/nr2d8DmTCfO7E857My/cIRXzjPwBLA6vQfQNOwBfAR+qRP2Q8yLiwtbV1UqQ5O2J2U0iUI6Fb
-        7SToQe5gbAfbwFrEWYzLwY6w/Qn0NSbjBCLd2ImZP0XO3qampssi8eNhGpXwfxLsc/b4HzyTmFGJ7h8l
-        2SHe7lvH2gCYDv4mZkGYxk40MJEELrXPuEDCES/hcMLPlzDxB997cobp7MhDhRW4k+I/gHWhHpUo6ota
-        6+6o6IFE0iXgtAcRKzaNJj2IFoWqchRHcQNN/N9RvHVcjmIpPkZut+KP0Tx06ceooa2t7epwHx+i4G0U
-        8wX7DRwJyBdo8OZwGz+KLWkDN4ZqUMcK3BSqc6eurq5LSDgLPMysH0tBoZdO1wD8VA6hG9Sjm2MOcyWO
-        Z0ItLS1XEbgB/GNScGA4SHqc8TuwBL4a+DH6iwYnM65EfiVOzz+AOcy1wdxRpjy5d3HcAzLgie7u7kvD
-        VEI+a+ybgAV6wCcUnR7mErIRbIsBbtk91JgRplKKb7kfmVpmMjHUFSMKX0wTdeTP2FSohwjDGyDvMoaq
-        LJHEr98a4CP4PVAL3Iozw60sEXsF2AtqQjVEBLeBlSEmhOPCSLyaxt5i3Al82baD9fCvAp/5euB90ef9
-        S/gmceaIdAkh14DdIf5HBEwzGMO9oVLn1dvLhjP9Ft7Oc+Ae7XV1dReyrLcIeXXGh89eY4yFP2Eu7RL+
-        91kr3SkJ4bQIZV96hBYVr0ocIOTZyAOMKxi/DLsztnF5ddr0mR1hrmyV9rQJa6ArvSfg4HJ+Ll+uuOQR
-        i/4w+mPAbTrHWQj09yNv1KbP8OMYfUkTyF8gD31ZUTSheE0H+FOgD/4ul5ctdzu894KtoAA/P8JGkDZ9
-        9DXGWHOYy5zgFLwTrIH/NQniJnslwgDYZJfgWfgtwP2dQfbQaWHsZfRtz3vyJcFFFKdhPnz68N8dsZ4p
-        5tpibuDqbgYDNDfF5Z+LYNcn6e5pk3nPR64Hdv1M2JcS4F7+Cj5pAnmGSItrC5/nI8ZYc9Sn/43wVcBL
-        q+/Ogzbwroq0uEQSv+392F5gGR+CP2LisKVNHDVJ4Ki61Mez3xh0c80BX3KRQU6awPaOwn6Yjyn0QAp0
-        LtcuLyHwq0B9xCaE7DW8J57t3cEPbjUJ3U/kqImLzC7waXENa+KzX8f3EXxW6WySGYHkVMP2MnzJLxny
-        62BNiMpvqwsxIeLWgRXy2GaC4hVz+amZfe9fSxvwAHYYFWgAAAAASUVORK5CYII=
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDzMkANUHeQAAAoVJREFU
+        WEe1lr1rFEEchi+JBk1E1CaaSiFFghAxNpai2GttiJjYWwQURIIIiaRQk1gYGwVBQcHSRls/42fjH6CC
+        ICh+Yun5vLPv7q1nbrNL5h54YGd+H3N3zM1srSr1er0Lj+ND/GX1PIFdTmsPLNCLD7AV97HX6fGh+c2w
+        TDE3nB4XGu/CP2GJYpQz7LJ40PRMaF+O0y6LB00Xk96luOKyeNB0JuldimmXxYOmB5PepTjgsnjQtAOX
+        QvtinmCHy+JC4x34Qau04D1ud3p7YIE+vI6/MUXP17DPae2HxXQq6myQPZ6OC43X4jl8ii8qqhrVrnG7
+        6lB8HlfLjNtVg8Ie/BparI5vWP2CokhXbiwm3LY8FD1PaqOw5LbloGAkqVuWt3gS92K/1fMpVKwVI26/
+        MiRfTWr+4TuewE6nKW+99FBjnZZj+AWbWXRaMSRuwB+hpIE24x7H9Y3nUKdeyju8hP3OGcbPmOcnblS8
+        EJJGQ3oDvQUNOjaEzY3zKDbk3EFsfoM6olghJB1LcjOmHAowHsDl3ow0N+C0AOOpEGlw1KHWkKQj9llI
+        T/iIGo86Pq5JeInajPKVJmDcOfoVVaPaFI3LHdkkrsNbqspxyLF7eBuzV3A94x3FPD6Mee5itfuCAu3o
+        s6oGbSDteM3pfN+KWvQyLvh5GyqmHH2BdCPPY/bPqQzF+lvNepjBnG7BlP/egpmbxTEP40DDSdQZkf4C
+        F/ECdqJ+AcUmnR4PmnbjTkxfQrQHsmtWz6g9IJSj3G6H40DDx+qe4zWGkxDfaCLHI5fFg6a6H7QZ82yy
+        ebT5drssLjTej5+0imn+AIrtc3p7YIEtqDcl3XzpB9DzNG52Wklqtb/ZlZEdR2NsHwAAAABJRU5ErkJg
+        gg==
 </value>
   </data>
   <data name="btnVehicules.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcGFjsCUZWAJQAAAb1JREFU
-        WEftVL1Kw1AYjYPO6iPo4hv4ByruIiiWLq6Cs75A0cEHUNCHUNx09WfSDi5FbNrEUp3E0UloPF84X3IJ
-        oU1uKHbIgUOSe77vfId7w3VKlBhptNvtdfC41Wqd2FB6Xdddo10+eJ63DZMeGBRkD0G2aJsdaHxOGBXh
-        E22zwff9OW1G+utmszljQ+lVH/Gk/WDw3MNGnOEGl3MD/ZvqAx5xuT+CIBhDAI9N341GY4JSbtTr9XF4
-        fdHrXbwpxUDBPsQL8hzcBcPU0E5ZZg14nKkfvWVGOE9mS4EmVP7oO7Z/gT7WgM+i+oGRt1BmS4FvLhp0
-        U7fMAvB6S3iHRADPwd86j4898lFF8BXUoylK8VLfBzCcJ7OZ0XGw3atG0VCJwSscGwPbUdUCvN/haV6r
-        8sP8ipaFrJWfzfS4B1WvcmwMMwAujUkuR8D6leoZeMm2CJ1OZ0r1gQHAAxzJrHGjLYOfht6XqP3Ac0n7
-        xQvfh4Y+MMBQWQbIE+AF57dThOKR8MweAGu3lK0hHim+IxgAQiWl8IayNcQj6QtWKMfodrvTEGpgdHul
-        Xpk5gf9ArnjzRqzJLMolSvw3HOcPA4fD9fEILXMAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnTransport.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcGFwM7GM3e4QAABO5JREFU
-        WEftl21olmUUx6dpkKhYGvhhisG+hfTiS2tYCJqgBFNMwjVb6kRB3RrKZkqxD76VLvrQByOENHQ419hC
-        omZj4nS+7MnlbOx9aywfdb4rDCzw6fe/OPftfe95tmn2SfzDn3Ouc851znVf9/Vy30lPFHp6el5ob29f
-        1tHRsRuWwO9pZzc2Nj5rIY8PijzX2tr6dmdn5wdtbW15FCmAqyl0AHkVHoa5+JaoOPovyKpYLPaMpfhv
-        IEk6/AHehhdIfBe5E/klshhZi+yDR+BCCg5TP0nalTDLJXpU8CSpdD4Jf0fPhGMptoD2UQvx0dLSMgH/
-        SvznYD2zNFN2Fae93wU9Cui4FvbSOcN7IoH2GuyXKLYD+bqZfRA7HPsqxRCbDxehl5r74UCnIlhPkWQz
-        hYD9NfzbSdyF/NTMITAjL+FvMX5l5qFB8FoVb2pqGq82xQqdIwFsIB3IsWYKAfuL5PuTkF1mGhx00DvX
-        tE8206ADEIj9WkXgNDP56OrqGof9NjEX4VQzDwyCTxK41JqDgoHNFqXTrwx9pXMEgH091C5ZiqwLrqU4
-        EKCtdj5RkA4TfNnRaHSUmfwB4BtNgb/wp5jLQWeG7NoNth0j6HPNHQ8C9BSZ1vSh4iQqh0IjcS+bK4mE
-        M2i3wj1m8oEtG/qrX4cX/SusGYZGS/AtvTMz+WBQefgqI5HISGQW1BrJRX4CL5N4seLoO9H8WdK1Hbu7
-        u593SYBmCt/NhEezjleS1loz9H6RhaJzAJKkEHsMWYU9GbmF9m/I68hDoumybbFuDthqqfWGNR8ARwb0
-        T6vgALBvCw6gPygSI+ZcggHIFlOMrQG9khvM2ArXMQgcG+gQ2quaKgpn4utNOGqDV8ReQbEoPehDboZ1
-        1NBllSNbCBh1qxVJ17tD30qHy7AKprmgAYDfFRE0U8HZ8nzIGu0AfDvIne+cQWDU+V5sei7U7RbaVgNB
-        RYifVV1dPcIbgHTZ5NPWRb9r8lv8cTtNSXSfn5Ku4P7F9Q55gnfhW2byQWxwETqY7hYhcg6yxmJ1s77p
-        OnrQlwxB13D06UpF+lMq0E5TMqhFpXN9H3KdtiXv+hX09xXXfxvypMELq6C5uXkM+o3gYeagKcFRCo8Q
-        mIP0B0Bb03iFmPc0C0h9D2zCVoWsls87B4LA9zHsgds1ENmI1efaYRcQBEZdvXrvurfvw29kVzF0XTLz
-        1Ua6gdn73Qr/wdYAa2BU8fIL6G4tQLedbRvW6TVayAOQqFxPoSD0egLd5xO6FuYJF2RgaqfIhk/fepOQ
-        q+k7F/0n9AwLixuAfMS4dRAHHAdgtnSSzUTvpVMy9GYg3S6Wz+SDGzRY19mAr8IbgM4PYirpn6c2+iR4
-        idwz1I4DTn29/uwlRc/H9oc+SOj0Du17tKOwDN19J5Dc7XUOqFexVeDTOnGvgLa+khs0EGZsHO16uEa+
-        hFAgAVpQlciPkAuhbjg9/S1sJchfYQxuVB9vAJL493vFBQ2cOA1oHj4VH/pryAaxnI57rODn8Av0i8hl
-        iiGhdstB1wGgp8AIMaGj1Rbcd9j/hgM/+cOABFNJpjNc50AR+lnZ7VTTj0gOBYfLxkPouv1QscjjyOmy
-        Pzb0RFrpJNRCu0PyM8gf4VV0zdRe9NNInX4lxMZvtf8LOv14FalQPyA5sICC+k1LjTvhnmJIJCX9C9sw
-        spRpgK6rAAAAAElFTkSuQmCC
-</value>
-  </data>
-  <data name="btnReparation.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcGFwQs1F/N4QAABcVJREFU
-        WEetlwlslFUQx1e8iAf1QPECKi0qR4KaGE3EE5WKmBiNiAhaTAuIRlEOoxATlaIRiqJpjSYkJsZIEbug
-        1niE1IJFrK3S1rK7vZeWqrXQFiVGLNbf/zHfdnfptmvSSf6dmf/Mmzf73vve99WXrLS1tZ1WV1d3d0ND
-        wxrwTX19fRv6CPhTNigFG0A+eNuGRSQYDF4EH2xqarrcqOSESS8BrzDR7zbJiyADbmJLS8s58Oc3NjZe
-        BmZqAvy/0b+CrJqamlOsjI+Jr7CGW5Nqore390SKPAe6GLSeQanWzGL8Avid6Ibi4uKTlI+5Gi6AXgJ+
-        wv4KhLHnKK4G8JvwHwMDN1FbWzuOpF3gOyZMQ18PtOxdYBN2JpimVaDRE7Dd5BS9AHs22Gp1boQPgY3g
-        atAknnjiJih6FYlawpeqq6tHoQtJ3o/Ojl5ST4jNIRbS5PLVFFwHXIb5I/A3A52VD8VJ4Bfjh809JpBp
-        kL+B5VYIs/5NHUDFtS3wN8OvA9vAbtBKzuuugAk5N8G7JtQ09ifYn8Gfqrg4Gh4O1+sGSIyoAi+zdBPQ
-        7WCBYpqYIpn42lMVfo1Ddx/2VGyd+pgGJFp+y/0WRCbHngTfCMZg9zUAsRailF87El2Lv0i8Tjr+dlAH
-        soEOZYobhOAvw99sbozQ5A3E873J+ZF6EvarNpxWu8clYqRDao8mgS3Yb4kn6Tx8HaJClu0My/UTXyJb
-        wiSj8PeCHKP6lejJGTMWrVVY4YIUfQcnj2W7VkmVlZWna5/gd+BvQ2vZKrhMzkTfil/HtgxzgxEdQPgW
-        kLAJYruY+FFvcmoUuYB+Gc5hikxBbye4UDz2MtCsOLFUBj7kBiDw1eTdZa4vHA5fCKdHNJSoCWoMJzZG
-        k4Nc0OG2hj/3M7DMrspuS0zBPoCOLHW0EFtA7Atz5b8B8rUS6ABYaqGI6IcwRpM/Kx+te+UeDc7HyQGL
-        QIGCcA+Dg4YimpyuC0cxiR5LcjvYsivtMOnXj1YM/kFsP/xc7NXo6/A/5jBfg252BRDslcRzZZSBB8AH
-        IMuCOoh56poCujD0q4LgcZ0DuBHYe8BRQ4htOFtNYq8E/lAodCla13EzWM7quKvYzY6wpbczR4kma6eg
-        Lp0S9B0KwgWw57pMRIUVg/8UaFWqyC8AKXYw34fbAX7APoT221A3try8/OT4Bli9cfj7tGRHCKbi6Nmf
-        rCB2Fx3e5jLjhFg6+Ff3g1He/v6jU47W1RxpgMa1BXviG8A/C79bBXtISjPeiQKJGlAu8X4bAPP/ZwN/
-        abJ2Xb3GO4E7bgvUEMV1J3QCPYbxW6DXcwWI2YJEDWDr8muV8T3GDOOdwLlDqAsJraejBk6H8Im4Q9gj
-        EN8bdQhXgUEbYMxUUKHJdAu+YLwTuHnggKEIZKi4haMfwwl22jvVlGLws/GTWYGl5L4rYxYoNd6JimkC
-        8JR8rYQLmJCfTexLczXpVvCk2Uk1QJ5e55muOIauxfiD+IwGaMnRuivmWUixKs7ETHNVbBpcLas0LJkG
-        tF3YB1m9kS4J51WwwTkmnGx9SJQAdTqZeLp49C349ZrMJSK29z+DO5NpAK33zBaXIMEZDbqBm8QTBnuv
-        Y7+3DdiF8E+7hChh4oXEPh+sAdVBh8VbyjGBfJ7Bu72vXE/sg+RroA+SLBDzQeKJFdah1ZWesAHG5qI3
-        WbhPWEZ9hpeScNzrVMtN7BGgTzL9f+A+yYC+eLQl+lx7D30I6EMyUQOHwS88PRdbOFbskdpHDffKjBc1
-        SUF9lK4F7qOUfN0jH4EVYDwYaAuO4k+3UP9iL4lmCq2JPmjJyiANRB7DAYWlHatBFNM/J+4FlawMSQMS
-        BujLSP+I/gHy8KdYaEAZsgY80blQA2qEAmXoHPQsCk/Udglw47W38Kuwf0QPXQOe6P7XyWeC9RTaCfSl
-        06nGgL71dGmtg9M1fa8Nc/+W488PBALnot3/Gn3i8/0HjcrVU0mF0bYAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="btnCarburant.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcGFwEqQEuckQAAA7dJREFU
-        WEfNl1lIlFEUx221DaON9p1eIlsgKlGikCyyPYiiUApMCUGKXCiyEjIlK5SKNloMyUCh6CVJm3ZMrBhz
-        mn0GNaSeeuqpB/udjzOD48yI5af0hz/3nHPPvf/73Tn3u9/E/DdwuVxrPR5PvdfrPed2u7f5/f5p2jU4
-        QLwU8QLadHgN+yP0wEf4x2gTu7q6hmm6+UCkgSc/D9fAWIl1dHSMRjhJFgBrYCt9i40BZoMtX4ZALqxF
-        1Ef7AVYgeAB/keTgJ0BnwB9QUBMzEdqFoPw0L2nfsCMTtVbsPp9vrqYODhBNYyGN7EgcTMFvdTgcM6xW
-        61iLxTJc0wYWLCAL4dciir0T+wdsx/ayI4co0qGaOnBAUAryObyL7i05GW1tbdOxK2EjC1mlqX+P5ubm
-        EUxSLFuroYhA/J2KB5+Y2lhNfDtsgndYyFTt6juY9AqDG2SSwFHsCeKz6P/Sc7sZm0rcjfAW2gyxwVF5
-        KE3pHQzczSTvdRfKmKBcu0LAdk+gz6FuCBCMs9vtk8TWvArYwtwbjIRo6OzsHIPoV5Jniy+LwG4iFm8k
-        9ADxZ3Clur2CvCXM9QLWyqI0HAqScmCxugYYsEkGqRsC4unkX1S3TyBfXvPX1Q0FnWFPJNXNgO+RjpZs
-        NfmeSH3RIPMz31N1Q0FHPZMuVDcIEYn2kmFMDWPWie10OueTW0gsLVrR0X+a/mx1Q0HHSVikrgEpHAbV
-        qRsGKVrG3JDdoHWTewr+xrZyJBdoWhDEa2GCuqFgklgGv4K34V4Sz0I7dtRLh8trFDl+uB5WS4xWLrDj
-        MKx2mCsP5qsbDv3N98ASErPgeO2KCnLusxBZsIvxQ/AzsUvFl4tL0wzI5Ua8RV1zwIRyUqoQfgKTZNFQ
-        cIF4hqYFQayBhSxXt/+QAkVMvh3kWF6VGO0D/Fxai5HUDcQOwjJ1zYEIIyhXtU8WJMWL/xD/M63xYgug
-        2/E179OOCWXrHyNWhcBGFrAf+zKxfNpcTQuCWDV5Ker2H1J8TOpCcB/tPRawlMKchz8HftK0IIilwkp1
-        zQHCpRRXJhP75HhKDDuZ+E+edoqRpAjUTSDPFCCyAjH5T3ET+4zaddhbsdM0zYDNZhtHny1wa5oGhFrZ
-        BfkWkJtvByyHDig/Tzyv68nYRbAdvtVh5gGRfChHsAS6YTZPO5JYMvyG/4s2j12RV3fE13W/oGI5CByR
-        j1YNGyAWi2gN/ZvFxz6MfcnoHCwgmAgtiJ+AcnkVatfgAWH5ki4wvQD/HTExfwBKNqd06EhXoAAAAABJ
-        RU5ErkJggg==
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDzIKxRg79wAAAh9JREFU
+        WEftlj1Lm1EYhoODkEmpSzvprggqSkVHO/gBdXMTQVBU7FKhkPYHiHSri6UUV+3WVbBdXIXWiIr2D1go
+        rZSqjfB63ec8J00k6puPRodccMH5vJ9D8r4nSdSoce+JoqgeB3EBX8RUa7Wn3mJKg4B23MVSSWO7xRUH
+        G7vxB/7Gl/gYu2KqtdqjvcrottjCsGAE9/APvsM+/GX22bKiuZLTj+9RNVRr2Ja5hesYOMNw8h5bUjLK
+        sCxlKjuwZkvcohbccsOe79hh02WjLMsMqFazTXsYeIp/NQsfcbHCKlOoxqiV9TAwZBPVQrWGQvFHeKLR
+        KqMH86EO8BqPsBc7cRn/x6ehzDeoGqr1DZd0gEOcdB+HQb8N97FSKKvV4h30J/FAjQw+t/EsjDXhMX7B
+        qRL9isp4YLFZGNN1nVFD/MR5HDB1Mb1Cvbtp21M07NU1Hm5SZYb8Z6hnIAoHuI0By4wNe574rTcT9wA6
+        7QoWer8L+RZjvVk6gJ4Bkb3zadfhBzfq2caNItWegLLqLF75+l0Q7hnY8e1ozOYd9JMYrueUDceGPfre
+        hTKSNuygP+ZmeEjVmfNt956uYu5TnMILPEe9w9OYO3+dWqs92quM3DnVCPfMrA6gj1uLq41q+q+Fxqkb
+        yucz5p68HJV1lVNXXND55MfyGLfpsiFrwkfmsWnTbkEjzmD4U/nv30qFIFMXUchXrQabqlHjLkkkLgHy
+        tzMfOEjH8gAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnVignettes.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcGFwA7M+CNIgAAAS1JREFU
-        WEftlzFuwkAQRd1FKSnCAdLiJgVpaehTcQSugJVcgJYiFBwBKg5AlxKfwDaWLNdJOrfwRpkui5ClWa1s
-        8aWnXaTBf3YHxpqoKIoPaODs4vSnOPIlTJqyLMdVVQ1cYL4mZqXh9pJTipF+/CcSSIjZ6H6Y5/nMklYJ
-        8IUX9gdLWiXgRW0SqOv6McuyZ0valmDC/teS8CXAQLSGxAXmKetCw+3Fw2NMVnJKF2LO1T9oeA/FKd/g
-        C1IX3MAOhhpuL0x+YE47nrrAfE8JlhpuL8zvfSBsH+hUAsFL4OtH+A1B/4a3GtGWBJ40vIfihLdeRgk3
-        4O9lhEEJn2LkgiSOsmq4vTC494HgfaBTJQg7mLD3MprJcPoqSbjA1Ptw+i5JwLXxnKUYabixougC835h
-        z4jJqu4AAAAASUVORK5CYII=
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDzY2jhuCdAAAAg9JREFU
+        WEftl8tKw0AUhmtFpeIVN260FXwMwdewVrB9g76AIrhxIXTjRhBviFAUfYV6WVU3+gKCuFfwshCx/v/M
+        SZ1MEtKkNwQ/+ODkZDL5m5m0mrCp1Wp98BR+wqiUZI4JNVkccPGCmioeToBNmFMTRgUXFjlTTJwAJfgF
+        o4fARa0KQBhiSU3cKLjADlCF03DcsgBt7AAkWggM9gswCeMGII2HwMBWLMEgtAOPqhuEgYHNBAh6Wo4D
+        cptgMKiZPRBGUW4TDAfpsXWi7IEwYgVoJX8jwAC0H3er9G5CNJPWoE6aZIBb2C3uGcDmHW7DDUv2eM7k
+        Cl7qss4rLMMPdaRhfQTf1JGBX4CyrI4HnOMkDo+wH/Lvhwc2hF0Zm9WHiqz0jvXhL34BmHIL8lOnROcJ
+        mJ9qnZMS1Gu6pXiGaekfUqnT8AW68AtgMibafMNZ2CPOSM+BS9MLR0TW7HmIG+BCPtUcnJe6whMGK+wT
+        1Ku65SVugIJMvAOdNc/zhEHbAnCPDMvE6hFLPQT5BpC2LsG+3JCb0/lCSUlvD3KjZeTY3IQZOeciLMCU
+        aJKXCc01r0hvGR5I7fcaMpCLsADX8EaXdfjOn+vSxQl8gvyy4o3MLx3W7JmvsYIB7nTZFaoMwA1i/kB0
+        0iSXxgWanf05tsGg/7+IcnpsW1iU2wSDQdwDfM3i/HseBOc6g9YeSCR+APi343/ADfs9AAAAAElFTkSu
+        QmCC
 </value>
   </data>
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -413,6 +329,62 @@
         ywBWT58YCsNS2NKQYknPiWEGYOnY0pBi6dZuGL9OLSwkZktDiiUVWEgSWMjpCCtmq7uwjEtLQ4qlx2Fh
         STa6tU4RLJ7SMoKFZBYW8j2AhcSvMwGWwlZmYMXbSgkW1+U6Kk9yehgWolGFZAqWkS3JRrdWRmAhGlVI
         t2BpbPHB6t6PohPBUtvKMKyYLY0qRAwWT2lJNrqxAoH/A2sDwYgQ+jq6AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="btnTransport.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDy8s6HnSFgAAAVxJREFU
+        WEftlU8rBVEchkdJKZSirK38SYmUhYU/5X4P+RKytbSykaWNtY21hWJjIYUPYGOBlG4kjOc9c2aapjl3
+        zuTmLMxTT7d+5z1z3mamO1Ecx6dYRRtXI+B3Dp81LPCKZ7iJvcp6oZ2eqMSa3eMqkaIiI+aAKpK8N/kS
+        s/iooYNbHDOHdCLJ1qL7JXzgQuv4oqtC/p34XQkWxz0ctVk9+ycUde7EHZaXSNYr0WErNt/dEsmaFz4l
+        NH/Q0ME1mruZwWC4hgN2m/a1MEUlzDtRGzaWHeTjBuZ5w22cxLJ80b60QCgusT9kAbEVusBN6ALvoQvc
+        hy6wG7LAFQ6pwAnq2/5X6uO0g4PmfyA4NJnB+QonbDyD2VQhU+a0jbshdIxV7Nt4BrPDZKkjRzbuhtAi
+        fpt4OR+4gMX/8iX8RBdfuIzFfXl7VOACQ3GuAgeoD0MI9+yDaGho+LdE0Q+3ZzbyjxsjZwAAAABJRU5E
+        rkJggg==
+</value>
+  </data>
+  <data name="btnReparation.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDys3BnDe/gAAA9tJREFU
+        WEe1l1uIlVUUx2fUJMZHXwYc8Ur6oHaBMR80FLEcNKeUCCq6iNqLGIoWg/moppBg0YP4MCGKIkOpSL1E
+        ETNPXREDoVFRE8t7WhASOP5+e9Y+nXOcc2bmnOYPP8631l77W+vbt/N9DeXq6+ubAxfhFpyFfTAzmusS
+        9xkFa+ESfA5N0fSfcD4Ht2E+PA07wWI2R0hNon8rfAenYQmcgGPRXCoa3gdHYWrY0+E8rE8BwxT93gUf
+        aiOMCZ9FXEoBA4lGi3CopoX9BPwJLSlgiCK+Cf6BwjRyPQYciXUaj8PSaCsR/m3wMzSGfRg6UuMQRfwC
+        6A0zCduRcDpGafiUDs/WaC8I3yT4O0ztt+BkmIOK2AnwK2wIl74ZYL7W7HB4ngELKSkCewccCFO7HbrD
+        rCricvLdYW+AXjDflhSkMC7APJgGFuGwTwGT34E5EWrsO3AkzIoipjz5bjC5D1q69XB0wq64tgjn/C84
+        AIXkCtspKCzMgURbpeQTUkC5aJgNPumMcFUVcSW7o1j4hpc8i4At4FQ8Fa6qIu6hIriuLXkWgW+DQ38U
+        HOoXwIXzZoQY8zGkLctvoQioL3kWHZqhAz6DHnDf/wZpd/C7FDyMVoDnukXYbrL6klcSN8q7IxfxEaiv
+        wD19A0YmeRY3zEV8CjdhLhyHf2FPxIxM8ixunIv4AxphLFjEN7AHHAmno+IWrVvc3IPEk2x02LkIR+Ix
+        2Ar/bxHc7A34CQ7BOdgbTUnYuQjXhAvTIkq2aM3iJuvgOqyCzbAS0j9jsfD54nIf2sOuvwg6++pk8ifh
+        kXAnYbsGPoF7cBVcmJ4RbtG2iKm9CDoVJ8+HzOJotv0lOAO+tqXdEf42qK8IgouTt4Bb68NoWxS/70Fn
+        XJefE7UXQVC15LvAkfB1yjXxY+qEuK5URHPYFuHu8KzwmB+nv0Q4qyXfHrZ+3w2Nez11DGGXF+GxXliw
+        XDttH8DXcA0WRlNqXAPDSb42dSwT/pIisrAdtRfBXTUR3E2+Aky38XmoltxhHzR5Fu0WUfwHZvJvwbOk
+        C/zG8A3MN66DBvwCVvcomDz/seTk7gKLGzR5FnG5iJfBpzV5Pj3Xw5cwC37XcRd8+7XS5RFUc/Is4l1w
+        3se11RVu/X55fQ/mvK3jJGyPdm2nJM95Tr4mmocs+qwGF5xz7rD75M/CKfAN7BXoMXAyXIFN0dGRcDpq
+        Tq7oNw5c7U6BR/UX8AOYfDz44ftaDp4JFuGQOTTu85qTZ9F/IbjaXXB+gbk2fHKT74+wfuFwJPxi9QBx
+        mJZFU13iPn7YHoTL4FR0w6v9rQ0NDwCbJK63j8rRqwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="btnCarburant.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAAB3RJTUUH5gcJDy0xuUncTQAAAwpJREFU
+        WEe9l12IDWEYx8/u+lpElnzFhSjCjd2k5KtQNlpciKsta9tQSFm0V1sukItVe6PkAmmtlK/cKLmRWt83
+        tFqlFEKxPvIZ4/d/55lz5ow9c05mjl/9mnmf93mfOWfmnZl3Mp7nbcHXeB6bcGLmf8IB72CUR3gIF2Gl
+        pZYHDtCLcbzCE7geq2xYelB0DDZiN/ZjHNewxoamD8WrUKddp/8uDsRTnGtDygsHmo678B6G+Yj1llZ+
+        OFgFtuNvFG9wFtZihaUpbwRuw8kWShcKb0RNSh14Hf5EzZ1qrMQLKF5irQ1LFwrrYMvxGwboVr7o72bR
+        ZVplw4pD8m6cb81YyFuBX/EMxqEz1GLDCkNSnSX3YbWFC0LOSHyBOu2aD8XQXZWdK3nQoSLhp+EB64qF
+        PD3AtqKudymcxaE2PAfBDa47x2ccb90FIacL3+I5LJVGG56D4A2/L49W6y4IOXtRDytdDl2+YjzDv/8Y
+        Qc3WKN3WXRByVqIOrB8w0AstyjEbmg8dPX5/Hu3WXRByxvqp7pbs8HdjeY/DbXgOggtQ1zJA/2aUdcdC
+        3nM8iDtR/MIneB9/KBBhsw3Nh44arMelOMjCRSH3EopgDjRZl/qm4AMXzdFj3elAQb0fhF7je/ALZh88
+        7M/DKHXWnRyKrfVretetvQw/YYNLAPYfYpjj1pUcik31a+ZOLfvb8TG6Jx/bNgyj58xol5wGFNME7rem
+        2sPwAy609gyMssMlpwHFtEwTEyyk2Gk8ak21owua7BlKDIUOu5Ket9hCijWg3hFuRc12P0ZZ4pKTQqFN
+        fj2v2UKKDcF36H4U22kYrKYCulxyUig006/nHbGQg/ZJ7LSm2reVFOI7Zi/bP0MRvc516122kIP2atTy
+        zX1LsN2HUdpcclIodBN7remgHVwGPRvmYDBZw/RZejIo1Il69g+2kGJaSV9FnYXo9RdaU3ZYejIopI9a
+        oW8IvVdaUN+XQi+oK6i3pu6OW9iK42x4cig2CTWpwmjRegpnW1p54UBrUCskqQlXwjdkJvMHXbX4GQC+
+        fG8AAAAASUVORK5CYII=
 </value>
   </data>
   <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
